--- a/SurfNPaddleBlog/SurfNPaddleBlog.csproj
+++ b/SurfNPaddleBlog/SurfNPaddleBlog.csproj
@@ -160,6 +160,7 @@
     <Compile Include="BlogDbContext.cs" />
     <Compile Include="Controllers\BlogPostsController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\SharedController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
